[package]
name = "stupid_gifs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
image = "0.24.7"
log = "0.4.20"
pixels = "0.13.0"
rfd = "0.12.0"
winit = "0.28.7"
winit_input_helper = "0.14.1"

# [profile.release]
# lto = "fat"
# codegen-units = 1
# panic = "abort"
